# project_template_kokkos

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  main.cpp
cmake/modules/: Config.cmake.in  CustomDoxygen.cmake  CustomGoogleTest.cmake  Dependencies.cmake  Install.cmake  Options.cmake
compile_benchmarks/: CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
include/: CMakeLists.txt
tests/: CMakeLists.txt
